# MEFS

./: .gitignore  404.html  CMakeLists.txt  README.md  index.html  mefs.txt  mkdocs.yml  scene.exozodi.txt  scene.planet.txt  scene.star.txt  scene.zodi.txt  score.txt  sitemap.xml
.agents/rules/: common-agent-mistakes.md  compile-after-edit.md  concurrency-practices.md  error-handling-practices.md  git-workflow.md  help-message-standard.md  naming-conventions.md  testing-practices.md
.agents/skills/diagnose-build-failure/: SKILL.md
.agents/workflows/: add-function.md  compile-test.md  fix-bug.md  setup-dev-environment.md  sync-worktree.md
docs/: index.md  mefs_create_scene.md  mefs_psf.md  mefs_score.md  theory.md
docs/javascripts/: mermaid-init.js
mefs_create_scene/: index.html
mefs_psf/: index.html
mefs_score/: index.html
search/: search_index.json
src/: mefs_create_scene.c  mefs_fits.c  mefs_fits.h  mefs_optics.c  mefs_optics.h  mefs_psf.c  mefs_score.c  mefs_simulation.c  mefs_simulation.h  mefs_utils.c  mefs_utils.h
theory/: index.html
